[gd_scene load_steps=35 format=3 uid="uid://csruu7ua5y1g4"]

[ext_resource type="Script" path="res://scenes/enemy/enemynew.gd" id="1_f7i4d"]
[ext_resource type="Texture2D" uid="uid://c37rqjld5wjv" path="res://scenes/enemy/Mushroom/Take Hit.png" id="2_b5d47"]
[ext_resource type="Texture2D" uid="uid://du5wonyg7f2y8" path="res://scenes/enemy/Mushroom/Run.png" id="2_b81op"]
[ext_resource type="Texture2D" uid="uid://bi4uwlagct41e" path="res://scenes/enemy/Mushroom/Idle.png" id="2_bp5xe"]
[ext_resource type="Texture2D" uid="uid://55ytb4v8f8j2" path="res://scenes/enemy/Mushroom/Death.png" id="2_g2s3i"]
[ext_resource type="Texture2D" uid="uid://b3ig5j8d2vf6q" path="res://scenes/enemy/Mushroom/Attack.png" id="2_vjbdg"]
[ext_resource type="Script" path="res://scenes/CharacterStateMachine.gd" id="7_eyilv"]
[ext_resource type="Script" path="res://scenes/enemy/Walk.gd" id="8_7snje"]
[ext_resource type="Script" path="res://scenes/2D_Scenes/Player2D/State.gd" id="9_nrkie"]
[ext_resource type="Script" path="res://scenes/enemy/Hit.gd" id="10_maan7"]
[ext_resource type="Script" path="res://scenes/enemy/Attack.gd" id="11_oxwvd"]
[ext_resource type="Script" path="res://scenes/enemy/Damageable.gd" id="12_lefnu"]

[sub_resource type="Animation" id="Animation_ux535"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ncohq"]
resource_name = "attack1"
length = 0.8005
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_vjbdg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hit"
}]
}

[sub_resource type="Animation" id="Animation_n8ah4"]
resource_name = "death"
length = 0.3405
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_g2s3i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_fed8m"]
resource_name = "hit"
length = 0.3615
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_b5d47")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_em34j"]
resource_name = "idle"
length = 0.3165
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_bp5xe")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_b72tp"]
resource_name = "walk"
length = 0.735
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_b81op")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lyjnd"]
_data = {
"RESET": SubResource("Animation_ux535"),
"attack1": SubResource("Animation_ncohq"),
"death": SubResource("Animation_n8ah4"),
"hit": SubResource("Animation_fed8m"),
"idle": SubResource("Animation_em34j"),
"walk": SubResource("Animation_b72tp")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0u7nc"]
animation = &"attack1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uqpqg"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b1wro"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_elcqn"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_454du"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ot0y2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_485dr"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4tmbu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_88eot"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wg7df"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_uya5m"]
states/attack1/node = SubResource("AnimationNodeAnimation_0u7nc")
states/attack1/position = Vector2(447.834, 54)
states/death/node = SubResource("AnimationNodeAnimation_uqpqg")
states/death/position = Vector2(698, 176)
states/hit/node = SubResource("AnimationNodeAnimation_b1wro")
states/hit/position = Vector2(273, 254)
states/walk/node = SubResource("AnimationNodeAnimation_elcqn")
states/walk/position = Vector2(346, 176)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_454du"), "walk", "death", SubResource("AnimationNodeStateMachineTransition_ot0y2"), "walk", "attack1", SubResource("AnimationNodeStateMachineTransition_485dr"), "attack1", "walk", SubResource("AnimationNodeStateMachineTransition_4tmbu"), "walk", "hit", SubResource("AnimationNodeStateMachineTransition_88eot"), "hit", "walk", SubResource("AnimationNodeStateMachineTransition_wg7df")]
graph_offset = Vector2(-396.939, 9.83871)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_46f66"]
size = Vector2(33, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wp8rv"]
size = Vector2(30, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6xxhv"]
size = Vector2(33, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e7lx4"]
size = Vector2(21.875, 36)

[node name="Enemy" type="CharacterBody2D"]
position = Vector2(836, 97)
collision_layer = 5
collision_mask = 5
script = ExtResource("1_f7i4d")

[node name="PlatformDetector" type="RayCast2D" parent="."]
target_position = Vector2(0, 10)

[node name="FloorDetectorRight" type="RayCast2D" parent="."]
position = Vector2(15, 0)

[node name="FloorDetectorLeft" type="RayCast2D" parent="."]
position = Vector2(-20, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-4, -26)
texture = ExtResource("2_vjbdg")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lyjnd")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_uya5m")
anim_player = NodePath("../AnimationPlayer")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, -18)
shape = SubResource("RectangleShape2D_46f66")

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "current_state", "animation_tree")]
script = ExtResource("7_eyilv")
character = NodePath("..")
current_state = NodePath("Walk")
animation_tree = NodePath("../AnimationTree")

[node name="Walk" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("damageable", "attack_state")]
script = ExtResource("8_7snje")
damageable = NodePath("../../Damageable")
attack_state = NodePath("../Attack")

[node name="Dead" type="Node" parent="CharacterStateMachine"]
script = ExtResource("9_nrkie")
can_move = false

[node name="Hit" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("damageable", "dead_state", "walk_state", "return_state")]
script = ExtResource("10_maan7")
damageable = NodePath("../../Damageable")
dead_state = NodePath("../Dead")
walk_state = NodePath("../Walk")
return_state = NodePath("../Walk")
can_move = false

[node name="Timer" type="Timer" parent="CharacterStateMachine/Hit"]
wait_time = 0.5
one_shot = true

[node name="Attack" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("return_state")]
script = ExtResource("11_oxwvd")
return_state = NodePath("../Walk")
can_move = false

[node name="Timer" type="Timer" parent="CharacterStateMachine/Attack"]
wait_time = 0.75

[node name="HealthTimer" type="Timer" parent="CharacterStateMachine/Attack"]
wait_time = 0.75
one_shot = true

[node name="Damageable" type="Node" parent="."]
script = ExtResource("12_lefnu")
health = null
dead_animation_name = null

[node name="RightDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightDetection"]
position = Vector2(23, -25.5)
shape = SubResource("RectangleShape2D_wp8rv")

[node name="LeftDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftDetection"]
position = Vector2(-31.5, -25)
shape = SubResource("RectangleShape2D_6xxhv")

[node name="HitboxLeft" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxLeft"]
position = Vector2(-31, -18)
shape = SubResource("RectangleShape2D_e7lx4")

[node name="HitboxRight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxRight"]
position = Vector2(25, -18)
shape = SubResource("RectangleShape2D_e7lx4")

[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Attack" method="_on_animation_tree_animation_finished" flags=18]
[connection signal="animation_finished" from="AnimationTree" to="Damageable" method="_on_animation_tree_animation_finished" flags=18]
[connection signal="timeout" from="CharacterStateMachine/Hit/Timer" to="CharacterStateMachine/Hit" method="_on_timer_timeout" flags=18]
[connection signal="timeout" from="CharacterStateMachine/Attack/Timer" to="CharacterStateMachine/Attack" method="_on_timer_timeout" flags=18]
[connection signal="timeout" from="CharacterStateMachine/Attack/HealthTimer" to="CharacterStateMachine/Attack" method="_on_health_timer_timeout" flags=18]
[connection signal="body_entered" from="RightDetection" to="CharacterStateMachine/Walk" method="_on_new_detection_body_entered" flags=18]
[connection signal="body_entered" from="RightDetection" to="CharacterStateMachine/Walk" method="_on_right_detection_body_entered" flags=18]
[connection signal="body_entered" from="RightDetection" to="CharacterStateMachine/Attack" method="_on_right_detection_body_entered" flags=18]
[connection signal="body_entered" from="LeftDetection" to="CharacterStateMachine/Walk" method="_on_left_detection_body_entered" flags=18]
[connection signal="body_entered" from="HitboxLeft" to="." method="_on_hitbox_body_entered" flags=18]
[connection signal="body_entered" from="HitboxLeft" to="." method="_on_hitbox_left_body_entered" flags=18]
[connection signal="body_exited" from="HitboxLeft" to="." method="_on_hitbox_left_body_exited" flags=18]
[connection signal="body_exited" from="HitboxLeft" to="." method="_on_hitbox_body_exited" flags=18]
[connection signal="body_entered" from="HitboxRight" to="." method="_on_hitbox_body_entered" flags=18]
[connection signal="body_entered" from="HitboxRight" to="." method="_on_hitbox_right_body_entered" flags=18]
[connection signal="body_exited" from="HitboxRight" to="." method="_on_hitbox_right_body_exited" flags=18]
[connection signal="body_exited" from="HitboxRight" to="." method="_on_hitbox_body_exited" flags=18]
